--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@
 <body>
     <div id="root"></div>
     <!-- Main App Script -->
-    <script type="text/babel" src="App.js"></script>
+    <script type="text/babel" src="App.Js"></script>
 </body>
 </html>
